# cookiecutter-pixi-python

./: .gitignore  LICENSE  README.md  cookiecutter.json  pixi.toml
.github/workflows/: test.yml
{{cookiecutter.package_name}}/: .gitattributes  .gitignore  README.md  lefthook.yaml  mkdocs.yml  pixi.toml  pyproject.toml  tbump.toml
{{cookiecutter.package_name}}/.github/workflows/: docs.yml  release.yml  test.yml
{{cookiecutter.package_name}}/docs/: index.md  installation.md  quickstart.md
{{cookiecutter.package_name}}/docs/about/: citation.md
{{cookiecutter.package_name}}/docs/reference/: api.md
{{cookiecutter.package_name}}/docs/source/: conf.py  index.md
{{cookiecutter.package_name}}/docs/tutorials/: tutorial1.md  tutorial2.md
{{cookiecutter.package_name}}/scripts/: init.sh  local.sh  setup.sh  view-docs.sh
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  layer1.py
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/: .template.json  pixi.toml  pyproject.toml  tbump.toml
{{cookiecutter.project_name}}/docs/source/: conf.py
{{cookiecutter.project_name}}/scripts/: cookiecutter-update.sh  init.sh  local.sh  setup.sh  slurm-cache.sh  slurm-repos.sh
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.package_name}}.py
