[project]
authors = [{name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}]
dependencies = []
name = "{{cookiecutter.project_name}}"
requires-python = ">= 3.11"
version = "0.0.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Pixi configurations
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
{{cookiecutter.package_name}} = { path = ".", editable = true }

[tool.pixi.dependencies]

[tool.pixi.tasks]

[tool.pixi.feature.dev.dependencies]
ruff = "*"
ty = "*"
import-linter = "*"
pytest = "*"
pytest-cov = "*"
lefthook = "*"
bumpver = "*"
mkdocs-material = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
fmt = "ruff format ."
lint = "ruff check . --fix"
types = "ty check"
imports = "lint-imports"
test = "pytest"
docs = "mkdocs build"
hooks = { depends-on = ["fmt", "lint", "types", "imports", "test", "docs"] }
init = "./scripts/init.sh"
bumpver = "bumpver"

# Ruff configurations
[tool.ruff]
exclude = [
    "**/*.ipynb",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "TID252",   # relative import
    "D203",     # confict: incorrect blank line before class (uses D211 instead)
    "D213",     # conflict: multi-line summary second line (uses D212 instead)
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Import-linter configurations
[tool.importlinter]
root_package = "{{cookiecutter.package_name}}"

[[tool.importlinter.contracts]]
name = "Module Layering"
type = "layers"
layers = [
    "{{cookiecutter.package_name}}.layer2",
    "{{cookiecutter.package_name}}.layer1",
]

# Pytest configurations
[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = [
    "--doctest-modules",
    "--cov={{cookiecutter.package_name}}",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"

# Pytest-cov configurations
[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

# Bumpver configurations
[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = "scripts/lock.sh"
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"src/{{cookiecutter.package_name}}/__init__.py" = [
    '__version__ = "{version}"',
]
