[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
authors = [{name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

# Ruff configurations
[tool.ruff]
exclude = [
    "docs",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "TID252",   # relative import
    "D203",     # confict: incorrect blank line before class (uses D211 instead)
    "D213",     # conflict: multi-line summary second line (uses D212 instead)
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Ty configurations
[tool.ty.src]
include = [
    "src",
    "tests",
]

# Import-linter configurations
[tool.importlinter]
root_package = "{{cookiecutter.package_name}}"

[[tool.importlinter.contracts]]
name = "Module Layering"
type = "layers"
layers = [
    "{{cookiecutter.package_name}}.layer2",
    "{{cookiecutter.package_name}}.layer1",
]

# Pytest configurations
[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = [
    "--doctest-modules",
    "--cov={{cookiecutter.package_name}}",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"

# Pytest-cov configurations
[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

# Bumpver configurations
[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = "scripts/lock.sh"
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"pixi.toml" = [
    'version = "{version}"',
]
"src/{{cookiecutter.package_name}}/__init__.py" = [
    '__version__ = "{version}"',
]
